# OpenGL_Workbench_Framebuffer

./: CMakeLists.txt  Main.cpp  Readme.md  vcpkg.json
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/framebuffer/: fragment.glsl  vertex.glsl
